[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Piravit Chenpittaya", email = "karnzx-18762@hotmail.com"},
]
dependencies = [
    "coverage>=6.4.3",
    "nose2>=0.12.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
